--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .jsx,.js,.tsx,.ts src/"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.12.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
