--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
+    "react-webcam": "^7.0.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.5"
   },
