--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.12.2",
     "@types/styled-components": "^5.1.26",
+    "firebase": "^9.10.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
