--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint --ext .jsx,.js,.tsx,.ts src/"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@react-google-maps/api": "^2.12.2",
     "@types/styled-components": "^5.1.26",
     "firebase": "^9.10.0",
+    "graphql": "^16.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
