--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .jsx,.js,.tsx,.ts src/"
+    "lint": "eslint --ext .jsx,.js,.tsx,.ts src/",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
@@ -26,6 +27,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.12.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -36,6 +38,9 @@
     "eslint-plugin-react": "^7.31.8",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
-    "vite-plugin-pwa": "^0.12.7"
+    "vite-plugin-pwa": "^0.12.7",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-react-apollo": "3.3.3"
   }
 }
