--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^8.23.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react": "^7.31.8",
+    "react-tabs": "^5.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-pwa": "^0.12.7",
