--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
@@ -28,6 +29,9 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@graphql-codegen/typescript-react-apollo": "3.3.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -39,9 +43,6 @@
     "react-tabs": "^5.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
-    "vite-plugin-pwa": "^0.12.7",
-    "@graphql-codegen/typescript-operations": "2.5.3",
-    "@graphql-codegen/typescript": "2.7.3",
-    "@graphql-codegen/typescript-react-apollo": "3.3.3"
+    "vite-plugin-pwa": "^0.12.7"
   }
 }
