--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.4.0",
     "react-webcam": "^7.0.1",
     "sort-by": "^1.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.12.0",
@@ -34,6 +35,7 @@
     "@graphql-codegen/typescript-react-apollo": "3.3.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "@vitejs/plugin-react": "^2.1.0",
