--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: 'https://sign-gress-server.azurewebsites.net/graphql'
+schema: 'http://localhost:8000/graphql'
 documents: 'src/graphql/**/*.ts'
 generates:
   src/graphql/generated.ts:
